--- a/package.json
+++ b/package.json
@@ -52,11 +52,10 @@
         "rimraf": "^3.0.2",
         "sass": "^1.32.13",
         "sass-loader": "^11.1.1",
-        "ts-jest": "^27.0.7",
-        "ts-loader": "^9.2.6",
+        "ts-jest": "27.1.4",
+        "ts-loader": "9.2.8",
         "tsconfig-paths-webpack-plugin": "^3.5.1",
-        "typescript": "^4.3.5",
-        "webpack": "^5.37.0",
-        "webpack-cli": "^4.7.0"
+        "typescript": "4.6.3",
+        "webpack-cli": "4.9.2"
     }
 }
