--- a/src/svcwork/tsconfig.json
+++ b/src/svcwork/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "lib": [
-            "webworker"
+            "dom"
         ]
     },
     "extends": "../../tsconfig.json",
