--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,9 @@
     "include": [],
     "references": [
         {
+            "path": "./src/svcwork"
+        },
+        {
             "path": "./src/background"
         },
         {
