--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
         "sjcl": "cd node_modules/sjcl && perl configure --without-all --with-ecc --with-convenience --with-codecBytes --with-codecHex --compress=none && make sjcl.js",
         "prebuild": "npm run sjcl",
         "build": "webpack",
-        "pretest": "npm run sjcl",
-        "test": "node --experimental-vm-modules node_modules/.bin/jest",
+        "test": "tsc -b && node --experimental-vm-modules node_modules/jest/bin/jest.js --ci",
         "lint": "eslint ./src/**/*.{ts,tsx}",
         "clean": "rimraf dist"
     },
@@ -46,13 +45,12 @@
         "eslint-plugin-security": "^1.4.0",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.3.1",
-        "jest": "^27.0.6",
+        "jest": "28.1.0",
         "mini-css-extract-plugin": "^1.6.0",
         "prettier": "^2.3.2",
         "rimraf": "^3.0.2",
         "sass": "^1.32.13",
         "sass-loader": "^11.1.1",
-        "ts-jest": "27.1.4",
         "ts-loader": "9.2.8",
         "tsconfig-paths-webpack-plugin": "^3.5.1",
         "typescript": "4.6.3",
