--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,3 +29,7 @@ jobs:
         run: npm run build
       - name: Testing
         run: npm test
+      - name: cover
+        uses: ArtiomTr/jest-coverage-report-action@v2
+        with:
+          annotations: failed-tests
