--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     },
     "dependencies": {
         "asn1-parser": "1.1.8",
-        "asn1js": "^3.0.5",
+        "asn1js": "3.0.5",
         "axios": "0.23.0",
         "buffer": "6.0.3",
         "keccak": "3.0.2",
