--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Privacy Pass",
-    "manifest_version": 2,
+    "manifest_version": 3,
     "description": "Client support for Privacy Pass anonymous authorization protocol.",
-    "version": "4.0.0",
+    "version": "4.1.0",
     "icons": {
         "32": "icons/32/gold.png",
         "48": "icons/48/gold.png",
@@ -10,17 +10,17 @@
         "128": "icons/128/gold.png"
     },
     "background": {
-        "scripts": [
-            "privacypass.js"
-        ]
+        "service_worker": "privacypass.js"
     },
     "permissions": [
-        "<all_urls>",
         "cookies",
         "webRequest",
         "webRequestBlocking"
     ],
-    "browser_action": {
+    "host_permissions": [
+        "*://*/*"
+    ],
+    "action": {
         "default_icon": "icons/32/grey.png",
         "default_title": "Privacy Pass",
         "default_popup": "popup.html"
