--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,30 +1,30 @@
 {
-    "name": "Privacy Pass",
-    "manifest_version": 2,
+    "name": "EXP",
+    "manifest_version": 3,
     "description": "Client support for Privacy Pass anonymous authorization protocol.",
-    "version": "4.0.0",
-    "icons": {
-        "32": "icons/32/gold.png",
-        "48": "icons/48/gold.png",
-        "64": "icons/64/gold.png",
-        "128": "icons/128/gold.png"
-    },
+    "version": "1.0.0",
     "background": {
-        "scripts": [
-            "privacypass.js"
-        ]
+        "service_worker": "privacypass.js",
+        "type": "module"
     },
     "permissions": [
-        "<all_urls>",
-        "cookies",
-        "webRequest",
-        "webRequestBlocking",
-        "webRequestAuthProvider",
-        "declarativeNetRequestWithHostAccess"
+        "activeTab",
+        "alarms",
+        "browsingData",
+        "contextMenus",
+        "declarativeNetRequest",
+        "declarativeNetRequestFeedback",
+        "declarativeNetRequestWithHostAccess",
+        "notifications",
+        "scripting",
+        "storage",
+        "system.display",
+        "unlimitedStorage",
+        "webNavigation",
+        "webRequest"
     ],
-    "browser_action": {
-        "default_icon": "icons/32/grey.png",
-        "default_title": "Privacy Pass",
-        "default_popup": "popup.html"
-    }
+    "host_permissions": [
+        "*://*/*",
+        "<all_urls>"
+    ]
 }
