--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,30 +1,27 @@
 {
-    "name": "EXP",
+    "name": "Privacy Pass",
     "manifest_version": 3,
     "description": "Client support for Privacy Pass anonymous authorization protocol.",
-    "version": "1.0.0",
+    "version": "4.0.0",
+    "icons": {
+        "32": "icons/32/gold.png",
+        "48": "icons/48/gold.png",
+        "64": "icons/64/gold.png",
+        "128": "icons/128/gold.png"
+    },
     "background": {
         "service_worker": "privacypass.js",
         "type": "module"
     },
     "permissions": [
-        "activeTab",
-        "alarms",
-        "browsingData",
-        "contextMenus",
         "declarativeNetRequest",
-        "declarativeNetRequestFeedback",
-        "declarativeNetRequestWithHostAccess",
-        "notifications",
-        "scripting",
         "storage",
-        "system.display",
-        "unlimitedStorage",
-        "webNavigation",
         "webRequest"
     ],
+    "action": {
+        "default_icon": "icons/32/gold.png"
+    },
     "host_permissions": [
-        "*://*/*",
         "<all_urls>"
     ]
 }
